--- a/css/_scrollbar.scss
+++ b/css/_scrollbar.scss
@@ -1,33 +1,42 @@
-
-.scroll-content{
-    height:100%;
-    max-height:100vh;
-    overflow-y:auto;
+.scroll-content {
+    height: 100%;
+    max-height: 100vh;
+    overflow-y: auto;
 }
 
 
 
+
+
 /** scrollbars */
+
+@-moz-document url-prefix() {
+    html {
+        scrollbar-color: var(--color-text) var(--color-bg);
+    }
+}
+
 .scrollbar {
-    &{
+    & {
         //scrollbar-color: var(--scroll-thumb) var(--sidebar-bg);
         //scrollbar-width: thin;
     }
+
     &::-webkit-scrollbar {
         width: var(--scroll-width);
         border-radius: 0.5em;
         background-color: transparent;
         background-image: linear-gradient(90deg,
-                var(--sidebar-bg) 0%,
-                var(--sidebar-bg) 41%,
-                var(--scroll-thumb) 41%,
-                var(--scroll-thumb) 59%,
-                var(--sidebar-bg) 59%,
-                var(--sidebar-bg) 100%);
+                var(--color-bg) 0%,
+                var(--color-bg) 41%,
+                var(--color-text) 41%,
+                var(--color-text) 59%,
+                var(--color-bg) 59%,
+                var(--color-bg) 100%);
     }
 
     &::-webkit-scrollbar-thumb {
-        background: var(--scroll-thumb);
+        background: var(--color-text);
         border-radius: 0.5em;
     }
 
@@ -39,8 +48,8 @@
 
 .scrollbar-neg {
     //--scroll-thumb: var(--focus-color);
-    --scroll-thumb: var(--color-neg);
-    --sidebar-bg: rgba(255,255,255,0);
+    //--scroll-thumb: var(--color-neg);
+    //--sidebar-bg: rgba(255,255,255,0);
 
     @extend .scrollbar;
 
