--- a/css/style.css
+++ b/css/style.css
@@ -3,18 +3,21 @@
   --color1: black;
   --color2: hsl(350, 90%, 35%);
   --color3: hsl(350, 85%, 25%);
-  --color-neg: #fff;
-  --color-bg: #fff;
-  --color-bg-trans: rgba(255,255,255,0);
-  --color-text:#000;
+  --color-bg-orig: hsla(55, 15%, 95%, 1 );
+  --color-text-orig: hsl(55, 10%, 20%, 1);
+  --color-bg:var(--color-bg-orig);
+  --color-bg-trans: hsla(55, 10%, 98%, 0);
+  --color-text: var(--color-text-orig);
+  --color-neg: var(--color-bg);
+  --color-bg-neg: var(--color-text);
   --sidebar-bg: #fff;
   --scroll-thumb: #000;
   --scroll-width: 0.5rem;
   --color-scroll-bg: red;
   --color-scroll-thumb: var(--color3);
   --color-scroll-thumb-hover: var(--color2);
-  --color-bg-neg: #000;
   --hellgrau: #eee;
+  --color-focus: hsl(180, 80%, 20%);
   --focus-color: hsl(180, 80%, 20%);
   --focus-color: #000;
   --input-border-color: #777;
@@ -57,8 +60,8 @@
   --header-margin: 0.5rem;
   --p-margin: var(--line-height);
   --border-width: 1px;
-  --border-color: #000;
-  --border-color-neg: #fff;
+  --border-color: var(--color-text);
+  --border-color-neg: var(--color-bg);
   --border: var(--border-width) solid var(--border-color);
   --border-dotted: var(--border-width) dotted var(--border-color);
   --padding: 0.3em;
@@ -74,23 +77,23 @@
 }
 
 /** scrollbars */
+@-moz-document url-prefix() {
+  html {
+    scrollbar-color: var(--color-text) var(--color-bg);
+  }
+}
 .scrollbar::-webkit-scrollbar, textarea.txt-code::-webkit-scrollbar, body::-webkit-scrollbar, .scrollbar-neg::-webkit-scrollbar {
   width: var(--scroll-width);
   border-radius: 0.5em;
   background-color: transparent;
-  background-image: linear-gradient(90deg, var(--sidebar-bg) 0%, var(--sidebar-bg) 41%, var(--scroll-thumb) 41%, var(--scroll-thumb) 59%, var(--sidebar-bg) 59%, var(--sidebar-bg) 100%);
+  background-image: linear-gradient(90deg, var(--color-bg) 0%, var(--color-bg) 41%, var(--color-text) 41%, var(--color-text) 59%, var(--color-bg) 59%, var(--color-bg) 100%);
 }
 .scrollbar::-webkit-scrollbar-thumb, textarea.txt-code::-webkit-scrollbar-thumb, body::-webkit-scrollbar-thumb, .scrollbar-neg::-webkit-scrollbar-thumb {
-  background: var(--scroll-thumb);
+  background: var(--color-text);
   border-radius: 0.5em;
 }
 .scrollbar::-webkit-scrollbar-track, textarea.txt-code::-webkit-scrollbar-track, body::-webkit-scrollbar-track, .scrollbar-neg::-webkit-scrollbar-track {
   border-radius: 0.5em;
-}
-
-.scrollbar-neg {
-  --scroll-thumb: var(--color-neg);
-  --sidebar-bg: rgba(255,255,255,0);
 }
 
 /* reset version 2024-07-15 */
@@ -911,9 +914,8 @@ span[style*=text-decoration] {
 }
 
 .bck-neg, .btn-default, button {
-  --focus-color: #fff;
-  background-color: var(--color-bg-neg);
-  color: #fff;
+  background-color: var(--color-text);
+  color: var(--color-bg);
 }
 
 .bck-gry {
@@ -1684,7 +1686,7 @@ input[type=file]::file-selector-button {
   display: inline-block;
   font-size: 1em;
   height: 1em;
-  transform: translateY(0.25em);
+  transform: translateY(0.2em);
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -1704,7 +1706,7 @@ input[type=file]::file-selector-button {
 /***** Chrome, Safari, Opera and Edge Chromium styles *****/
 /* slider track */
 .input__range::-webkit-slider-runnable-track, input[type=range]::-webkit-slider-runnable-track {
-  background-color: var(--scroll-thumb);
+  background-color: var(--color-text);
   border-radius: 0.5em;
   height: 0.25em;
 }
@@ -1714,12 +1716,11 @@ input[type=file]::file-selector-button {
   appearance: none;
   -webkit-transform: translateY(-40%);
   transform: translateY(-40%);
-  background-color: var(--scroll-thumb);
-  background-color: var(--border-color);
+  background-color: var(--color-text);
   height: 1em;
   width: 1em;
   border-radius: 1em;
-  outline: 0.2em solid var(--sidebar-bg);
+  border: 0.1em solid var(--color-bg);
 }
 
 .input__range:focus::-webkit-slider-thumb, input[type=range]:focus::-webkit-slider-thumb {
@@ -1729,7 +1730,7 @@ input[type=file]::file-selector-button {
 /******** Firefox styles ********/
 /* slider track */
 .input__range::-moz-range-track, input[type=range]::-moz-range-track {
-  background-color: var(--scroll-thumb);
+  background-color: var(--color-text);
   border-radius: 0.5em;
   height: 0.25em;
 }
@@ -1742,16 +1743,15 @@ input[type=file]::file-selector-button {
   appearance: none;
   transform: translateY(0%);
   /*custom styles*/
-  background-color: var(--scroll-thumb);
-  background-color: var(--border-color);
+  background-color: var(--color-text);
   height: 1em;
   width: 1em;
   border-radius: 1em;
-  outline: 0.2em solid var(--sidebar-bg);
+  border: 0.1em solid var(--color-bg);
 }
 
 .input__range:focus::-moz-range-thumb, input[type=range]:focus::-moz-range-thumb {
-  background-color: var(--focus-color);
+  background-color: var(--color-focus);
 }
 
 fieldset + fieldset {
@@ -1858,16 +1858,13 @@ fieldset + fieldset {
   src: url("../fonts/Outfit/Outfit_latin_100-900.woff2") format("woff2");
   unicode-range: U+0-FF, U+131, U+152-153, U+2BB-2BC, U+2C6, U+2DA, U+2DC, U+304, U+308, U+329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-.txt-code {
-  font-family: monospace;
+body {
+  background-color: var(--color-bg);
+  color: var(--color-text);
 }
 
-input:focus,
-a:focus,
-button:focus,
-select:focus,
-textarea:focus {
-  outline: 1px solid var(--focus-color);
+.txt-code {
+  font-family: monospace;
 }
 
 a {
