--- a/lib/ps-dialog/ps-dialog.css
+++ b/lib/ps-dialog/ps-dialog.css
@@ -14,7 +14,7 @@ dialog {
     border: none;
     filter: drop-shadow(0.5em 0.5em 0.5em rgba(0, 0, 0, 0.4));
     visibility: hidden;
-    border:1px solid var(--color-text, #000 );
+    border:1px solid var(--color-bg-orig, #000 ); 
 }
 
 /* create backdrop replacement to enable transition */
@@ -22,7 +22,7 @@ dialog {
     content: "";
     position: fixed;
     inset: 0;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color:var(--color-text-orig, #000);
     pointer-events: none;
     z-index: 9999;
 }
@@ -40,9 +40,12 @@ dialog,
     opacity: 0;
 }
 
-.dialog-active dialog,
-.dialog-active::before {
+.dialog-active dialog{
     opacity: 1;
+}
+
+.dialog-active::before {
+    opacity:0.75;
 }
 
 .dialog-active dialog {
