--- a/css/list.css
+++ b/css/list.css
@@ -215,7 +215,7 @@ details>details{
 }
 
 
-.item-in-iframe .header-logo{
+.item-in-iframe .header-logo {
     display: none;
 }
 
@@ -277,6 +277,42 @@ nav a {
 }
 
 
+
+.a-fontkit {
+    flex-grow: 5;
+}
+
+.img-font-preview {
+    height: 5em;
+    max-width: inherit;
+    object-fit: contain;
+    object-position: 0 0%;
+    margin: -1.75em 0 -1.5em 0;
+    max-width: inherit;
+    transition: 0.3s transform;
+    transform-origin: 0;
+
+}
+
+.font-item {
+    border-bottom: 1px dotted var(--color-text);
+    border-bottom: 1px dotted transparent;
+
+    padding-bottom: 1em;
+}
+
+
+.a-fontkit:focus,
+.font-item:hover {
+    border-bottom-color: var(--color-text);
+
+    .img-font-preview {
+        transform: scale(1.2);
+    }
+}
+
+
+
 .darkmode {
     --focus-color: #fff;
     --color-bg: var(--color-text-orig);
@@ -285,6 +321,10 @@ nav a {
 
     background: var(--color-bg);
     color: var(--color-bg-orig);
+
+    .img-font-preview {
+        filter: invert(1);
+    }
 
     .feather-input-icon {
         --color-bg: var(--color-bg-orig);
@@ -429,4 +469,59 @@ input {
     margin: -1px;
     overflow: hidden;
 
+}
+
+/** summary styles **/
+
+details summary {
+    list-style-type: none;
+    padding-left: 0.5em;
+}
+
+
+summary::marker,
+summary::-webkit-details-marker {
+    display: none;
+}
+
+
+summary:before {
+    display: inline-block;
+    ;
+    content: '+';
+    position: relative;
+    left: -0.5em;
+    transition: 0.3s transform;
+}
+
+details[open] summary:before {
+    content: '\2212';
+    transform: rotate(180deg)translateY(-0.1em);
+}
+
+
+.img-font-preview {
+    position: relative;
+    color: transparent;
+    text-decoration: none;
+    border-bottom: none;
+    padding-left: 0em;
+}
+
+
+.img-font-preview:before {
+    display: block;
+    content: '';
+    position: absolute;
+    inset: 0;
+    background-color: var(--color-bg);
+    background-image: url("data:image/svg+xml,<svg width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'><path d='M12 4a8 8 0 0 1 7.89 6.7A1.53 1.53 0 0 0 21.38 12h0a1.5 1.5 0 0 0 1.48-1.75 11 11 0 0 0-21.72 0A1.5 1.5 0 0 0 2.62 12h0a1.53 1.53 0 0 0 1.49-1.3A8 8 0 0 1 12 4Z'><animateTransform attributeName='transform' type='rotate' dur='0.75s' values='0 12 12;360 12 12' repeatCount='indefinite'/></path></svg>");
+    background-repeat: no-repeat;
+    background-size: 2em;
+    width: 100%;
+    height: 2em;
+
+
+    /*
+*/
 }
