--- a/css/style.css
+++ b/css/style.css
@@ -843,6 +843,9 @@ span[style*=text-decoration] {
   .dsp-md-inl-blc {
     display: inline-block;
   }
+  .dsp-md-flx {
+    display: flex;
+  }
   .dsp-md-blc {
     display: block;
   }
@@ -862,6 +865,12 @@ span[style*=text-decoration] {
   }
   .dsp-ld-non {
     display: none;
+  }
+  .dsp-ld-flx {
+    display: flex;
+  }
+  .dsp-ld-blc {
+    display: block;
   }
   .dsp-ld-inl-blc {
     display: inline-block;
@@ -1596,6 +1605,13 @@ textarea {
   height: calc(var(--line-height) + 0.6em);
   line-height: inherit;
   height: max-content;
+}
+
+.btn-inline {
+  background: inherit;
+  color: inherit;
+  border: none;
+  padding: inherit;
 }
 
 label,
