--- a/lib/ps-style-inputs/ps-style-inputs.css
+++ b/lib/ps-style-inputs/ps-style-inputs.css
@@ -9,6 +9,7 @@
   overflow: hidden;
 }
 
+.icon-toggle-wrap,
 .icon-wrap {
   --opacity1:1;
   --opacity2:0;
@@ -20,6 +21,7 @@
   cursor: pointer;
 }
 
+.icon-toggle-wrap .icn-svg,
 .feather-input-icon {
   position: absolute;
   left: 0;
@@ -31,19 +33,23 @@
   color:var(--color-text);
 }
 
+.icon-toggle-wrap .icn-svg-1,
 .feather-input-icon1 {
   opacity: var(--opacity1);
 }
 
+.icon-toggle-wrap .icn-svg-2,
 .feather-input-icon2 {
   opacity: var(--opacity2);
 }
+
 
 .input-wrap:focus-within .feather-input-icon {
   /* outline: 1px solid var(--color-focus, #000); */
   color: var(--color-focus);
 }
 
+.btn-active .icn-svg,
 .input-wrap:has(input:checked) .feather-input-icon {
   --opacity2: 1;
   --opacity1: 0;
