--- a/css/list.css
+++ b/css/list.css
@@ -147,7 +147,8 @@ details>details{
 .svg-preview {}
 
 .label-wrp {
-    flex-grow: 0;
+    flex-grow: 1;
+    flex-shrink: 0;
     margin-left: auto;
 }
 
@@ -284,13 +285,14 @@ nav a {
 
 .img-font-preview {
     height: 5em;
-    max-width: inherit;
+    max-width: 100%;
     object-fit: contain;
     object-position: 0 0%;
     margin: -1.75em 0 -1.5em 0;
     max-width: inherit;
     transition: 0.3s transform;
     transform-origin: 0;
+
 
 }
 
@@ -504,9 +506,11 @@ details[open] summary:before {
     text-decoration: none;
     border-bottom: none;
     padding-left: 0em;
+    max-width:100%;
 }
 
 
+/*
 .img-font-preview:before {
     display: block;
     content: '';
@@ -518,9 +522,8 @@ details[open] summary:before {
     background-size: 2em;
     width: 100%;
     height: 2em;
-
-
 }
+*/
 
 
 
